objects/New_Test_Object_20__c.object
<CustomObject>
    <fields>
        <fullName>New_Field_10__c</fullName>
        <label>New Field 10</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Field_1__c</fullName>
        <label>New Field 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Field_2__c</fullName>
        <label>New Field 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>New Test Object 20</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>New Test Objects 20</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>